Update, the session listing now works. Added heaps of icons for browsers, OSs, etc.

--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -106,6 +106,10 @@ span.indicator.red {
     background-color: @colour-red;
 }
 
+span.indicator.orange {
+    background-color: @colour-orange;
+}
+
 span.logui strong {
     font-weight: 500;
     color: @colour-logui-purple;
