--- a/static/logui/less/global.less
+++ b/static/logui/less/global.less
@@ -8,6 +8,7 @@
 @colour-logui-purple: #46509E;
 @colour-green: #4A9B46;
 @colour-red: #AD3A3A;
+@colour-orange: #E3A01C;
 
 @colour-nojs-background: @colour-logui-purple;
 @colour-nojs-text: #FFF;
