--- a/static/logui/less/icons.less
+++ b/static/logui/less/icons.less
@@ -1,211 +1,536 @@
 /* Add Icon */
-.icon-add.dark {
+.icon-container.icon-add.dark {
     background-image: url('../img/icons.svg#add-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-add.dark:hover {
+.icon-container.icon-add.dark.hover:hover {
     background-image: url('../img/icons.svg#add-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-add.light {
+.icon-container.icon-add.light {
     background-image: url('../img/icons.svg#add-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-add.light:hover {
+.icon-container.icon-add.light.hover:hover {
     background-image: url('../img/icons.svg#add-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* User Icon */
-.icon-user.dark {
+.icon-container.icon-user.dark {
     background-image: url('../img/icons.svg#user-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-user.dark:hover {
+.icon-container.icon-user.dark.hover:hover {
     background-image: url('../img/icons.svg#user-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-user.light {
+.icon-container.icon-user.light {
     background-image: url('../img/icons.svg#user-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-user.light:hover {
+.icon-container.icon-user.light.hover:hover {
     background-image: url('../img/icons.svg#user-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-user.green {
+.icon-container.icon-user.green {
     background-image: url('../img/icons.svg#user-green');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-user.green:hover {
+.icon-container.icon-user.green.hover:hover {
     background-image: url('../img/icons.svg#user-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* Application Icon */
-.icon-application.dark {
+.icon-container.icon-application.dark {
     background-image: url('../img/icons.svg#application-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-application.dark:hover {
+.icon-container.icon-application.dark.hover:hover {
     background-image: url('../img/icons.svg#application-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-application.light {
+.icon-container.icon-application.light {
     background-image: url('../img/icons.svg#application-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-application.light:hover {
+.icon-container.icon-application.light.hover:hover {
     background-image: url('../img/icons.svg#application-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* Settings Icon */
-.icon-settings.dark {
+.icon-container.icon-settings.dark {
     background-image: url('../img/icons.svg#settings-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-settings.dark:hover {
+.icon-container.icon-settings.dark.hover:hover {
     background-image: url('../img/icons.svg#settings-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-settings.light {
+.icon-container.icon-settings.light {
     background-image: url('../img/icons.svg#settings-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-settings.light:hover {
+.icon-container.icon-settings.light.hover:hover {
     background-image: url('../img/icons.svg#settings-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* About Icon */
-.icon-about.dark {
+.icon-container.icon-about.dark {
     background-image: url('../img/icons.svg#about-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-about.dark:hover {
+.icon-container.icon-about.dark.hover:hover {
     background-image: url('../img/icons.svg#about-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-about.light {
+.icon-container.icon-about.light {
     background-image: url('../img/icons.svg#about-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-about.light:hover {
+.icon-container.icon-about.light.hover:hover {
     background-image: url('../img/icons.svg#about-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* Key Icon */
-.icon-key.dark {
+.icon-container.icon-key.dark {
     background-image: url('../img/icons.svg#key-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-key.dark:hover {
+.icon-container.icon-key.dark.hover:hover {
     background-image: url('../img/icons.svg#key-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-key.light {
+.icon-container.icon-key.light {
     background-image: url('../img/icons.svg#key-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-key.light:hover {
+.icon-container.icon-key.light.hover:hover {
     background-image: url('../img/icons.svg#key-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* Token Icon */
-.icon-token.dark {
+.icon-container.icon-token.dark {
     background-image: url('../img/icons.svg#token-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-token.dark:hover {
+.icon-container.icon-token.dark.hover:hover {
     background-image: url('../img/icons.svg#token-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-token.light {
+.icon-container.icon-token.light {
     background-image: url('../img/icons.svg#token-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-token.light:hover {
+.icon-container.icon-token.light.hover:hover {
     background-image: url('../img/icons.svg#token-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 /* Download Icon */
-.icon-download.dark {
+.icon-container.icon-download.dark {
     background-image: url('../img/icons.svg#download-dark');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-download.dark:hover {
+.icon-container.icon-download.dark.hover:hover {
     background-image: url('../img/icons.svg#download-light') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-download.light {
+.icon-container.icon-download.light {
     background-image: url('../img/icons.svg#download-light');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
-.icon-download.light:hover {
+.icon-container.icon-download.light.hover:hover {
     background-image: url('../img/icons.svg#download-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Firefox Icon */
+.icon-container.icon-firefox.dark {
+    background-image: url('../img/icons.svg#firefox-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-firefox.dark.hover:hover {
+    background-image: url('../img/icons.svg#firefox-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-firefox.light {
+    background-image: url('../img/icons.svg#firefox-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-firefox.light.hover:hover {
+    background-image: url('../img/icons.svg#firefox-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Generic Browser Icon */
+.icon-container.icon-browser.dark {
+    background-image: url('../img/icons.svg#browser-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-browser.dark.hover:hover {
+    background-image: url('../img/icons.svg#browser-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-browser.light {
+    background-image: url('../img/icons.svg#browser-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-browser.light.hover:hover {
+    background-image: url('../img/icons.svg#browser-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Chrome Icon */
+.icon-container.icon-chrome.dark {
+    background-image: url('../img/icons.svg#chrome-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-chrome.dark.hover:hover {
+    background-image: url('../img/icons.svg#chrome-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-chrome.light {
+    background-image: url('../img/icons.svg#chrome-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-chrome.light.hover:hover {
+    background-image: url('../img/icons.svg#chrome-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Desktop Icon */
+.icon-container.icon-desktop.dark {
+    background-image: url('../img/icons.svg#desktop-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-desktop.dark.hover:hover {
+    background-image: url('../img/icons.svg#desktop-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-desktop.light {
+    background-image: url('../img/icons.svg#desktop-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-desktop.light.hover:hover {
+    background-image: url('../img/icons.svg#desktop-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Safari Icon */
+.icon-container.icon-safari.dark {
+    background-image: url('../img/icons.svg#safari-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-safari.dark.hover:hover {
+    background-image: url('../img/icons.svg#safari-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-safari.light {
+    background-image: url('../img/icons.svg#safari-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-safari.light.hover:hover {
+    background-image: url('../img/icons.svg#safari-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Phone Icon */
+.icon-container.icon-phone.dark {
+    background-image: url('../img/icons.svg#phone-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-phone.dark.hover:hover {
+    background-image: url('../img/icons.svg#phone-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-phone.light {
+    background-image: url('../img/icons.svg#phone-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-phone.light.hover:hover {
+    background-image: url('../img/icons.svg#phone-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Edge Icon */
+.icon-container.icon-edge.dark {
+    background-image: url('../img/icons.svg#edge-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-edge.dark.hover:hover {
+    background-image: url('../img/icons.svg#edge-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-edge.light {
+    background-image: url('../img/icons.svg#edge-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-edge.light.hover:hover {
+    background-image: url('../img/icons.svg#edge-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Opera Icon */
+.icon-container.icon-opera.dark {
+    background-image: url('../img/icons.svg#opera-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-opera.dark.hover:hover {
+    background-image: url('../img/icons.svg#opera-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-opera.light {
+    background-image: url('../img/icons.svg#opera-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-opera.light.hover:hover {
+    background-image: url('../img/icons.svg#opera-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Apple Icon */
+.icon-container.icon-apple.dark {
+    background-image: url('../img/icons.svg#apple-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-apple.dark.hover:hover {
+    background-image: url('../img/icons.svg#apple-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-apple.light {
+    background-image: url('../img/icons.svg#apple-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-apple.light.hover:hover {
+    background-image: url('../img/icons.svg#apple-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Windows Icon */
+.icon-container.icon-windows.dark {
+    background-image: url('../img/icons.svg#windows-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-windows.dark.hover:hover {
+    background-image: url('../img/icons.svg#windows-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-windows.light {
+    background-image: url('../img/icons.svg#windows-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-windows.light.hover:hover {
+    background-image: url('../img/icons.svg#windows-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Tux Icon */
+.icon-container.icon-tux.dark {
+    background-image: url('../img/icons.svg#tux-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-tux.dark.hover:hover {
+    background-image: url('../img/icons.svg#tux-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-tux.light {
+    background-image: url('../img/icons.svg#tux-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-tux.light.hover:hover {
+    background-image: url('../img/icons.svg#tux-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Android Icon */
+.icon-container.icon-android.dark {
+    background-image: url('../img/icons.svg#android-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-android.dark.hover:hover {
+    background-image: url('../img/icons.svg#android-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-android.light {
+    background-image: url('../img/icons.svg#android-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-android.light.hover:hover {
+    background-image: url('../img/icons.svg#android-dark') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+/* Unknown Icon */
+.icon-container.icon-unknown.dark {
+    background-image: url('../img/icons.svg#unknown-dark');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-unknown.dark.hover:hover {
+    background-image: url('../img/icons.svg#unknown-light') !important;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-unknown.light {
+    background-image: url('../img/icons.svg#unknown-light');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+.icon-container.icon-unknown.light.hover:hover {
+    background-image: url('../img/icons.svg#unknown-dark') !important;
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
