--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -153,6 +153,10 @@ main section div.table div.row > span.centre {
     text-align: center;
 }
 
+main section div.table div.row > span.right {
+    text-align: right;
+}
+
 main section div.table div.row > span:first-child {
     -moz-box-sizing: border-box; 
     -webkit-box-sizing: border-box; 
@@ -193,7 +197,8 @@ main section div.table div.row span.icon {
     justify-content: center;
 }
 
-main section div.table div.row span.icon a {
+main section div.table div.row span.icon a,
+main section div.table div.row span.icon span {
     display: block;
     width: 28px;
     height: 28px;
