--- a/static/logui/less/nav/menu.less
+++ b/static/logui/less/nav/menu.less
@@ -99,7 +99,7 @@ nav.menu div.sub ul li a {
     font-size: 15px;
     color: @colour-menu-li-a-hover;
     text-decoration: none;
-    background-size: 75% 75%;
+    background-size: 75% 75% !important;
     background-position: -94px;
 }
 
