Added toggling functionality for flight statuses. Removed status for applications. It is confusing and not required.

--- a/static/logui/less/applications.less
+++ b/static/logui/less/applications.less
@@ -1,7 +1,7 @@
 @import 'global.less';
 
 main section div.table.applications div.row {
-    grid-template-columns: 40px 3fr 2fr 1fr;
+    grid-template-columns: 3fr 2fr 1fr;
 }
 
 main section div.table div.row.double-height span span.indicator {
