--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -98,6 +98,10 @@ span.indicator {
     border-radius: 13px;
 }
 
+span.indicator.clickable {
+    cursor: pointer;
+}
+
 span.indicator.green {
     background-color: @colour-green;
 }
