--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -197,6 +197,12 @@ main section div.table div.row span.icon {
     justify-content: center;
 }
 
+main section div.table div.row span.indicator-container a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 main section div.table div.row span.icon a,
 main section div.table div.row span.icon span {
     display: block;
