--- a/worker/templates/logui/base.html
+++ b/worker/templates/logui/base.html
@@ -26,6 +26,8 @@
         {% block cssblock %}
         {% endblock %}
 
+        <link rel="icon" type="image/png" href="{% static 'logui/img/favicon.svg' %}" />
+
         <title>LogUI</title>
     </head>
 
