Working prototype of the server control app is complete.

--- a/static/logui/less/core.less
+++ b/static/logui/less/core.less
@@ -119,10 +119,6 @@ span.logui strong {
     color: @colour-logui-purple;
 }
 
-.mono {
-    font-family: monospace;
-}
-
 .message-box {
     position: relative;
     -moz-box-sizing: border-box; 
@@ -183,4 +179,12 @@ code.block {
 .alert-text {
     color: @colour-red;
     font-weight: 400;
+}
+
+a {
+    color: @colour-logui-purple;
+}
+
+a:hover {
+    color: tint(@colour-logui-purple, 40%);
 }
