--- a/static/logui/less/global.less
+++ b/static/logui/less/global.less
@@ -39,3 +39,7 @@
 @colour-menu-li-a-hover: #000;
 @colour-menu-li-a-hover: @colour-logui-purple;
 @colour-menu-li-a-hover-text: #FFF;
+
+.mono {
+    font-family: monospace;
+}
