--- a/static/logui/less/main.less
+++ b/static/logui/less/main.less
@@ -90,11 +90,15 @@ form label span {
     font-weight: 500;
 }
 
-form label input[type="text"], form label input[type="password"] {
+form label input[type="text"], form label input[type="url"], form label input[type="password"] {
     float: right;
     width: 200px;
     padding: 4px;
     font-size: 13pt;
+}
+
+form label input[type="url"] {
+    .mono
 }
 
 main section div.table {
