--- a/worker/templates/logui/errors/500.html
+++ b/worker/templates/logui/errors/500.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'logui/css/error.css' %}" />
 
 <img src="{% static 'logui/img/logo.svg' %}" alt="LogUI Logo" />
-<h1>Server Error (HTTP 500)</h1>
+<h1>Internal Server Error (HTTP 500)</h1>
 <p>
     <strong>Something went wrong with the LogUI server. Sorry about this!</strong>
     If you're the administrator, check the server logs to see what has happened.
